syntax="proto3";

package pb;

option go_package="./;pb";

service Hello{
    rpc Login (LoginRequest) returns (LoginResponse) {};
    rpc Sinup (SinupRequest) returns (SinupResponse) {};
}

message LoginRequest{
    string username=1;
    string password=2;
    string email=3;
}

message LoginResponse{
    string msg=1;
    int64 code=2;
}

message SinupRequest{
    string username=1;
    string password=2;
    string repassword=3;
    string email=4;
}

message SinupResponse{
    string msg=1;
    int64 code=2;
}