syntax="proto3";

package pb;

option go_package="./;pb";

service greeter {
    rpc SayHello(HelloRequest) returns (HelloResponse) {};
}

message HelloRequest{
    string name =1;
    string msg=2;
}

message HelloResponse{
    string name=1;
    string msg=2;
}